# light-show

./: .features_msaf_tmp.json  .gitignore  README.md  analyze.py  andrew.py  andrew_send_to_rpi0.py  assign_tags.py  autogen.py  banner_grid.py  beta.html  cert.pem  config.ini  config.json  config2.json  dj-beta.html  dj-manifest.webmanifest  dj.html  dj2.html  find_bad_song_duplicates.py  fullchain.pem  generate_rekordbox_effects.py  generate_show.py  grid_helpers.py  helpers.py  index.html  joystick_and_keyboard_helpers.py  key.pem  light-show.ino  light.py  light3.py  light_server.py  lights-manifest.webmanifest  main.js  manifest.webmanifest  measures.json  pads.json  privkey.pem  queue.html  rekordbox_bridge.py  rekordbox_server.py  (+16 more)
configs/: config.json
effects/: 8films.py  Avenue.py  Daft Punk - Technologic (Official Video).py  Deorro - Five Hours (Static Video) [LE7ELS].py  Dom Dolla  Take It Official Music Video.py  Emmit Fenn  Control.py  Hello Seattle.py  Hudson Mohawke - Cbat (Official Audio).py  I GOT KICKED OUT OF THIS KFC.py  Justice - Genesis.py  Lane 8 - Woman.py  Lemaitre - Blue Shift.py  Lykke Li - I Follow Rivers (The Magician Remix).py  Moe Shop - Notice (w⧸ TORIENA).py  Neil Cicierega - Wow Wow.py  RIOT - Overkill [Monstercat Release].py  ROSALÍA - SAOKO (Apolø Remix).py  Skeler x Juche  Proxima.py  TETRIS THEME SONG (OFFICIAL TRAP REMIX) - DaBrozz.py  The Chainsmokers - All We Know ft_ Phoebe Ryan (Virtual Riot Remix).py  Young the Giant - Islands (Official Audio).py  all_we_know_chainsmokers_virtual_riot.py  andrew_effects.py  autogen_effects.py  autogen_helpers.py  automatic.py  basics.json  basics.py  basics_2.py  basics_old.py  black_hole.py  blue.py  butter.py  cnam.py  compiler.py  control.py  converted_misc.py  dayglow_close_to_you.py  deadmau5 feat Chris James - The Veldt.py  effects.json  (+30 more)
effects/autogen_shows/: g_Brett_Kavanaugh_Hearing_Automatic_x_Levels_Remix.py  g_Caravan_Palace__Star_Scat.py  g_Cheesecake.py  g_Everything_Goes_On.py  g_Genesis.py  g_KSLV_-_Pimp_Slap.py  g_Mad_Zach_-_The_Visitor.py  g_Madeon_-_Be_Fine_(Official_Audio).py  g_Martin_Garrix__Animals_Official_Video.py  g_Mirror.py  g_Neon_Pattern_Drum.py  g_Not_Butter.py  g_Notion_-_Hooked.py  g_Porter_Robinson_-_Musician_(Official_Music_Video).py  g_Radiohead_-_Everything_in_Its_Right_Place_(Sam_Goku_Edit).py  g_Sakamoto_Maaya_-_Okaerinasai_(tomatomerde_Remix).py  g_Superhumanoids_-_Too_Young_For_Love.py  g_Telepathic_Love.py  g_Three_Trapped_Tigers__5.py  g_cnam_slander_said_the_sky_cut.py  g_deadmau5_&_Kaskade_-_I_Remember_(HQ).py  g_deadmau5_feat_Rob_Swire_-_Ghosts_N_Stuff.py  g_luigi.py  g_mo_bamba.py  g_s_AREA21__Spaceships.py  g_s_Deadmau5__Raise_Your_Weapon_Madeon_Remix.py  g_s_Groundbreaking_BOF2012_ginkiha__EOS_Long_Version.py  g_s_Madeon__Beings_Audio.py  g_s_Madeon__Gonna_Be_Good.py  g_s_Madeon__Imperium.py  g_s_Madeon__Love_You_Back_Official_Audio.py  g_s_Madeon__Pop_Culture_live_mashup.py  g_s_Madeon__Technicolor.py  g_s_Madeon__Youre_On_ft_Kyan.py  g_s_Pendulum__The_Island_Madeon_Remix.py  g_s_Snails_House__Chiffon.py  g_s_Snails_House__Kitty.py  g_s_Snails_House__Pudding.py  g_s_Travis_Scott__BUTTERFLY_EFFECT_EXPLICIT_VERSION.py  g_s_ヨルシカ__左右盲OFFICIAL_VIDEO.py  (+3 more)
effects/grid_games/: pong_grid.py  snake_grid.py  tetris_grid.py
effects/unconverted/: butter.py  cnam.py  misc.py  rbg_experiment.py  shelter.py
esp32_led_driver/: esp32_led_driver.ino
estimations/: Notion - Hooked.jams  Radiohead - Everything in Its Right Place (Sam Goku Edit).jams
lights_icons/: icon.sh
old/: andrew.py  config.json  dj-old.html  dj.html  experiment_fast_ssh.py  key.pem  light.py  light2.py  old_code.py  old_terminal_code.py  play_in_terminal.py  profiles.json  queue_stuff.py  random_old_code.py  rbg_experiment.py  send_to_server.py  test.py  test_timing.py  timing_time.py
old/dont_use_new_version_rekordbox_launcher_6_7_2/: config.ini
old/scripts/: migrate_simple_effects.py
pads/: pads.json
profiles/: profiles.json
scripts/: decrypt_sqlciper.py  discover_color_mappings.py  download_mp3s_bulk.py  find_bad_song_duplicates.py  find_best_bezeir.py  generate_rekordbox_effects.py  make_stems.py  migrate_simple_effects.py  output_mappings_anderew.json  overwrite_stem_analysis_files.py  pong_grid.py  read_unencrypted_db.py  scp_songs.py  script_helpers.py  snake_grid.py  tagger.py  test_preset_scripts.py  tetris_grid.py  update_ray_with_youtube_playlist.py
shows/: shows.json  shows.py
songs/: notes_on_shelter.txt
testing/: discover_color_mappings.py  grid_numpy.py  inputs_test.py  led_address.py  led_serial.py  led_ws281x.py  pygame_test.py  test_array_syntax.py  test_led.py  test_pygame_2.py  test_pygame_music.py  test_rich_console.py
testing_and_scripts/: discover_color_mappings.py  dump.html  find_bad_song_duplicates.py  grid_numpy.py  led_serial.py  led_wave.py  serial_handler.py  tagger.py
winamp/: README.md  benchmark_winamp.py  build_c_module_for_python.py  build_projectm.py  load_all_presets.py  load_slow_presets.py  test_winamp.py  test_winamp_visual.py  winamp_offsets.json  winamp_visualmodule.cpp  winamp_wrapper.py
winamp/projectm/: CMakeLists.txt  features.cmake  notes.md  winamp_visualmodule.cpp
winamp/projectm/cmake/gles/: FindOpenGL.cmake
winamp/projectm/src/: CMakeLists.txt
winamp/projectm/src/api/include/projectM-4/: core.h  render_opengl.h  version.h
winamp/projectm/src/libprojectM/: CMakeLists.txt  Preset.hpp  PresetFactory.hpp  PresetFactoryManager.cpp  PresetFactoryManager.hpp  ProjectM.cpp  ProjectM.hpp  ProjectMCWrapper.cpp  TimeKeeper.cpp  projectM-exports.cmake  projectM-opengl.h
winamp/projectm/src/libprojectM/MilkdropPreset/: BlurTexture.cpp  CustomWaveform.cpp  MilkdropPreset.cpp  MilkdropPreset.hpp  MilkdropPresetFactory.cpp  MilkdropPresetFactory.hpp  MilkdropShader.cpp  MilkdropStaticShaders.cpp  MilkdropStaticShaders.hpp
winamp/projectm/src/libprojectM/Renderer/: FileScanner.cpp
winamp/projectm/src/libprojectM/libprojectM/: projectM4Config.cmake
winamp/projectm/test_sdl_audio/: CMakeLists.txt  test_sdl.cpp
(+3 files in other folders)
